# sample-lib

./: CMakeLists.txt  CMakeSettings.json  sample-lib.sln  vcpkg.json
sample-lib/: calc.h  sample-lib.vcxproj  sample-lib.vcxproj.filters
src/: calc.cpp
tests/: test_calc.cpp
